tests/ui/deprecation/issue-66340-deprecated-attr-non-meta-grammar.stderr
error: expected unsuffixed literal, found `test`
  --> $DIR/issue-66340-deprecated-attr-non-meta-grammar.rs:9:21
   |
LL | #[deprecated(note = test)]
   |                     ^^^^
   |
help: surround the identifier with quotation marks to parse it as a string
   |
LL | #[deprecated(note = "test")]
   |                     +    +

error: aborting due to 1 previous error

